@@ -1,3 +1,9 @@
+2008-07-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Update to Geany API 75.
+
+
 2008-07-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
